--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,10 +7,10 @@ ports:
     visibility: 'public'
 
 tasks:
-  - name: 'Start redis-server'
-    command: 'redis-server'
-  - name: 'Start mongodb'
-    command: 'mongod --dbpath /data/db --logpath ~/mongod.log --fork'
+  - name: 'Timescale'
+    init: 'docker run  --name timescaledb -p 5432:5432 -e POSTGRES_PASSWORD=postgres -d timescale/timescaledb:latest-pg13 '
+  - name: 'Redis'
+    init: 'docker run --name redis -d redis'
   - name: 'Start crusher app'
     init: yarn install && yarn setup:ee && cp ecosystem.config.sample.js ecosystem.config.js && rm .env && cp .env.gitpod .env && mysql -uroot -e "CREATE DATABASE crusher /*\!40100 DEFAULT CHARACTER SET utf8 */;" && DB_USERNAME=root yarn db:migration
     command: "pm2 start --only='crusher-server' && yarn workspace crusher-app dev"
